<resources>
    <string name="app_name">PAL Evaluations</string>
    <string name="AADAuthority">https://login.microsoftonline.com/common</string>
    <string name="AADResourceId">https://outlook.office.com</string>
    <string name="AADClientId">Paste your Client ID HERE</string>
    <string name="AADRedirectUrl">Paste your Redirect URI HERE</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Evaluations</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string-array name="aircraft_codes">
        <item>Q300</item>
        <item>Q400</item>
        <item>A320</item>
        <item>A330</item>
    </string-array>
    <string-array name="employee_status">
        <item>Regular</item>
        <item>Trainee/SLE</item>
        <item>Probationary</item>
    </string-array>
    <string-array name="evaluation_page_1">
        <item>Company ID|Safety</item>
        <item>Competency Card|Safety</item>
        <item>Safety Directives|Safety</item>
        <item>Preflight Checklist|Safety</item>
        <item>Flashlight with Spare Batteries|Safety</item>
        <item>Company Medical Certificate|Safety</item>
        <item>Passport &amp; Visa|Safety</item>
        <item>Flight Log Book|Safety</item>
        <item>Quick Reference Folder|Safety</item>
        <item>RON Clothes / Spare Uniform|Service</item>
    </string-array>
    <string-array name="evaluation_page_2">
        <item>Hair|Service</item>
        <item>Skin|Service</item>
        <item>Uniform|Service</item>
        <item>Baggage|Service</item>
        <item>Hosiery / Socks|Service</item>
        <item>Jewellery / Wristwatch|Service</item>
        <item>Nails|Service</item>
        <item>Personal Hygiene|Service</item>
        <item>Weight|Service</item>
    </string-array>
    <string-array name="evaluation_page_3">
        <item>Reported on time|Service</item>
        <item>Introduced / Acknowledged crew members|Service</item>
        <item>Participated in L1\'s safety pre-flight briefing|Safety</item>
        <item>Participated in L1\'s service pre-flight briefing|Service</item>
        <item>Participated in Captain’s safety pre-flight briefing|Safety</item>
        <item>Decorum &amp; approachability at the airport|Service</item>
        <item>Timely arrival at boarding gate|Service</item>
    </string-array>
    <string-array name="evaluation_page_4">
        <item>Stowed Safety Directives &amp; Flashlights|Safety</item>
        <item>Checked presence &amp; conditions of the following:|Header</item>
        <item>Emergency Equipment|Safety</item>
        <item>Jumpseat|Safety</item>
        <item>Doors / Exits|Safety</item>
        <item>Passenger Service Unit|Safety</item>
        <item>Seat Pocket Amenities|Safety</item>
        <item>Passenger Lifevest / Seatbelt|Safety</item>
        <item>Communication Systems|Safety</item>
        <item>Galley Equipment|Safety</item>
        <item>Lavatory Equipment|Safety</item>
        <item>Reported cabin discrepancies|Safety</item>
        <item>Performed security check|Safety</item>
        <item>Ensured completeness of galley supplies / equipment|Service</item>
        <item>Ensured meal / snack provisions are complete tally with checklist|Service</item>
        <item>Prepared passenger amenities &amp; needs / timely preparation|Service</item>
        <item>Checked lavatory &amp; completeness of its supplies / equipment|Service</item>
        <item>Checked grooming in preparation for boarding|Service</item>
        <item>Conducted final cabin check prior to boarding|Service</item>
        <item>Coordinated with L1 for special handling &amp; final load if not relayed|Safety</item>
    </string-array>
    <string-array name="evaluation_page_5">
        <item>Boarding stations|Safety</item>
        <item>Welcomed, greeted, properly addressed passengers|Service</item>
        <item>Assisted &amp; monitored in cabin baggage &amp; stowage|Service</item>
        <item>Assisted Special Handling Passengers|Safety</item>
        <item>Unobstructed aisle / exits|Safety</item>
        <item>Stowed COB in the OHB or under the seats|Safety</item>
        <item>Checked boarding pass &amp; conducted headcount|Safety</item>
        <item>Distributed infant’s lifevest|Safety</item>
        <item>Briefed exit row passengers|Safety</item>
        <item>Obtained close door clearance from L1|Safety</item>
    </string-array>
    <string-array name="evaluation_page_6">
        <item>Correct Door Closing &amp; Slide Arming Procedures / Cross Checked|Safety</item>
        <item>Reported close door to L1|Safety</item>
        <item>Unobstructed aisle / exits|Safety</item>
        <item>Secured galley compartments / trolleys / galley curtain|Safety</item>
        <item>Safety demonstration (position &amp; procedure)|Safety</item>
        <item>Lavatories secured &amp; unoccupied|Safety</item>
        <item>Switched off galley equipment|Safety</item>
        <item>Seatbelt / No Smoking Compliance|Safety</item>
        <item>PED compliance|Safety</item>
        <item>Seat backs upright / armrests down|Safety</item>
        <item>Window shades open / stowed curtains|Safety</item>
        <item>Stowed tray tables|Safety</item>
        <item>Properly stowed COBs &amp; OHB close|Safety</item>
        <item>Observed surface movement|Safety</item>
        <item>Take-off stations|Safety</item>
    </string-array>
    <string-array name="evaluation_page_7">
        <item>Checked passenger welfare after seatbelt sign off|Safety</item>
        <item>Changed into smock / vest|Service</item>
        <item>Offered inflight amenities pleasantly|Service</item>
        <item>Maintained cabin presence|Service</item>
        <item>Galley &amp; cabin - systematic &amp; orderly preparation|Service</item>
        <item>Meal service was timely &amp; on standard service flow|Service</item>
        <item>Meal service / offered refills &amp; after meal drinks|Service</item>
        <item>Galley &amp; cabin are clean &amp; tidy after meal |Service</item>
        <item>DFS / IFS / iPADs / iNAiR|Service</item>
        <item>Lavatories|Safety</item>
        <item>Monitored lavatory for security items|Safety</item>
        <item>Ensured passenger compliance to safety regulations|Safety</item>
        <item>Complied with safety regulations &amp; turbulence guidelines|Safety</item>
        <item>Monitored co-crew &amp; flight crew welfare|Safety</item>
        <item>Observed fire prevention procedures|Safety</item>
    </string-array>
    <string-array name="evaluation_page_8">
        <item>Collected &amp; returned all service items|Service</item>
        <item>Ensured items for rental are retrieved accounted for|Service</item>
        <item>Ensured proper accomplishment of checklists|Service</item>
        <item>Unobstructed aisle / exits|Safety</item>
        <item>Secured galley compartments &amp; equipment|Safety</item>
        <item>Lavatory secured &amp; unoccupied|Safety</item>
        <item>Galley equipment|Safety</item>
        <item>Seatbelt / no smoking compliance|Safety</item>
        <item>Seat backs upright / armrests down|Safety</item>
        <item>Opened window shades / stowed curtains|Safety</item>
        <item>Stowed tray tables|Safety</item>
        <item>Ensured carry-on baggage are properly stowed|Safety</item>
        <item>Ensured overhead bins are properly closed|Safety</item>
        <item>Changed back to jacket / on grooming standards|Service</item>
        <item>Landing stations (seatbelt &amp; shoulder harness)|Safety</item>
    </string-array>
    <string-array name="evaluation_page_9">
        <item>Trolleys sealed &amp; padlocked bonded items|Safety</item>
        <item>Observed surface movement|Safety</item>
        <item>Manned doors|Safety</item>
        <item>Checked outside condition|Safety</item>
        <item>Disarmed &amp; crosschecked doors correct door procedures|Safety</item>
        <item>Obtained open door clearance (L1)|Safety</item>
        <item>Checked outside condition|Safety</item>
        <item>Continuously ensured ramp area is safe for passengers deplaning|Safety</item>
        <item>Deplaning station|Safety</item>
        <item>Bid passengers well during deplaning / addressed passengers properly|Service</item>
        <item>Assisted &amp; passengers with their baggage|Service</item>
        <item>Properly accomplished catering documents / endorsed catering supplies|Service</item>
        <item>Retrieved &amp; stowed infant’s lifevest|Safety</item>
        <item>Performed security check|Safety</item>
    </string-array>
    <string-array name="evaluation_page_10">
        <item>Passenger Handling|Header</item>
        <item>Passenger interaction|Service</item>
        <item>Passenger handling|Service</item>
        <item>Passenger calls|Service</item>
        <item>Observed HUSH campaign throughout entire duty|Service</item>
        <item>Interpersonal Relationship to Peers|Header</item>
        <item>Receptive to constructive criticism|Service</item>
        <item>Crew interaction|Service</item>
        <item>Crew coordination|Service</item>
        <item>Teamwork|Service</item>
        <item>Impact|Header</item>
        <item>Projection in the cabin|Service</item>
        <item>Appropriate crew behaviour|Service</item>
        <item>Approachable &amp; willing to assist passengers|Service</item>
        <item>Maintained positive attitude/motivated despite adverse conditions|Service</item>
        <item>Cost Effectiveness|Header</item>
        <item>Conserved / maximized the use of available resources / equipment|Service</item>
        <item>Handled aircraft equipment &amp; supplies properly &amp; carefully|Service</item>
        <item>Professional Integrity|Header</item>
        <item>Displayed accountability to errors|Service</item>
        <item>Reported critical incidents|Service</item>
        <item>Returned left behind items / company supplies, etc.|Service</item>
    </string-array>
    <string name="dimension1">Cabin Crew Equipment</string>
    <string name="dimension2">Grooming</string>
    <string name="dimension3">Preflight Preparation</string>
    <string name="dimension4">Aircraft Boarding</string>
    <string name="dimension5">Passenger Boarding</string>
    <string name="dimension6">Doors Closed</string>
    <string name="dimension7">After Take Off Duties</string>
    <string name="dimension8">Before Landing Duties</string>
    <string name="dimension9">After Landing Duties</string>
    <string name="dimension10">Personal Effectiveness</string>
    <string name="dimension11">Safety Knowledge</string>
</resources>