<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.evaluation.pal.palcrewevaluation.SummaryFragment"
    android:orientation="vertical">

    <!-- Linear V -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <!-- Linear H -->
        <LinearLayout
            android:id="@+id/GradeBreakdownLayout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="24dp"
            android:layout_weight="0.6"
            android:orientation="vertical"
            android:padding="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">
                <android.support.v4.widget.Space
                    android:layout_width="180dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Safety Score"
                    android:layout_weight="0.5"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Service Score"
                    android:layout_weight="0.5"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dimension1" />

                <TextView
                    android:id="@+id/safetyScore1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />

                <TextView
                    android:id="@+id/serviceScore1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dimension2" />

                <TextView
                    android:id="@+id/safetyScore2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />

                <TextView
                    android:id="@+id/serviceScore2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dimension3" />

                <TextView
                    android:id="@+id/safetyScore3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />

                <TextView
                    android:id="@+id/serviceScore3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dimension4" />

                <TextView
                    android:id="@+id/safetyScore4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />

                <TextView
                    android:id="@+id/serviceScore4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dimension5" />

                <TextView
                    android:id="@+id/safetyScore5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />

                <TextView
                    android:id="@+id/serviceScore5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dimension6" />

                <TextView
                    android:id="@+id/safetyScore6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />

                <TextView
                    android:id="@+id/serviceScore6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dimension7" />

                <TextView
                    android:id="@+id/safetyScore7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />

                <TextView
                    android:id="@+id/serviceScore7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dimension8" />

                <TextView
                    android:id="@+id/safetyScore8"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />

                <TextView
                    android:id="@+id/serviceScore8"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dimension9" />

                <TextView
                    android:id="@+id/safetyScore9"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />

                <TextView
                    android:id="@+id/serviceScore9"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dimension10" />

                <TextView
                    android:id="@+id/safetyScore10"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />

                <TextView
                    android:id="@+id/serviceScore10"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dimension11" />

                <TextView
                    android:id="@+id/safetyScore11"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />

                <TextView
                    android:id="@+id/serviceScore11"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background='#000000'
            android:padding="8dp"
            android:orientation="horizontal"
            android:layout_weight="0.2">

            <com.github.gcacace.signaturepad.views.SignaturePad
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/signature_pad_1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1.0"
                android:background="#FFFFFF"
                android:layout_margin="8dp"
                app:penColor="@android:color/black"
                />
            <com.github.gcacace.signaturepad.views.SignaturePad
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/signature_pad_2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1.0"
                android:background="#FFFFFF"
                android:layout_margin="8dp"
                app:penColor="@android:color/black"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="0.2"
            android:baselineAligned="true"
            android:weightSum="1.0">

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/employeeNameLabel"
                android:layout_weight="0.5"
                android:textAlignment="center" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/raterNameLabel"
                android:layout_weight="0.5"
                android:textAlignment="center"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="0.2"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:padding="8dp"
            android:text="Submit"
            android:onClick="submit"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Calculate Grade"
            android:onClick="updateScores"/>
    </LinearLayout>


</ScrollView>
